--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <script src="https://kit.fontawesome.com/ea129587c4.js" crossorigin="anonymous"></script>
   <script>
      const drop1 = document.querySelector('.course-drop4')
       const drop2 = document.querySelector('.course-drop1')
